# scverse-tutorials

./: .cruft.json  .gitignore  .gitignore.rej  .gitlab.yaml  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  README.md.rej  environment.yml  hatch.toml  pyproject.toml  pyproject.toml.rej
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml
.github/workflows/: documentation.yaml  execute-nbs.yaml  make-tutorials-json.yml  release.yaml
.nova/: last_run.txt  test-results.json
docs/: api.md  conf.py  conf.py.rej  contributing.md  developer_docs.md  how-to-dask.md  index.md  index.rst  patched-deps.txt  template_usage.md
docs/extensions/: typed_returns.py
docs/gallery/: index.rst
docs/locale/de/LC_MESSAGES/: index.mo  index.po  references.mo  references.po
docs/locale/de/LC_MESSAGES/notebooks/: example.mo  example.po  example_md.mo  example_md.po
docs/notebooks/: CCC_Liana_1.ipynb  Functional_analysis_with_decoupler.ipynb  README.txt  TrascriptionFactorActivity.ipynb  anndata_getting_started.ipynb  anndata_mudata_getting_started.ipynb  basic-scrna-tutorial.ipynb  example.ipynb  example.nbconvert.ipynb  example2.ipynb  example_md.md  external_resources.md  getting_started.ipynb  pseudobulk_functional_analysis.ipynb  scverse_data_backed.ipynb  scverse_data_interoperability.ipynb  subsampling.ipynb  tutorial_axes_anndata_mudata.ipynb  tutorial_concatenation_anndata_mudata.ipynb  tutorial_pseudobulk_DEA.ipynb
docs/notebooks/data/: T_cell_DEA_pyDeseq2_results_df.csv  ensembl_biomart_id2name.csv
src/scverse_doc/: __init__.py
tests/: test_basic.py
tutorial-registry/: categories.yml  schema.json  schema.packages.json  validate.py
tutorial-registry/tutorials/ATAC-preprocessing/: meta.yaml
tutorial-registry/tutorials/CITEseq-integration/: meta.yaml
tutorial-registry/tutorials/Joint-analysis-of-multiomic-data-with-MultiVI/: meta.yaml
tutorial-registry/tutorials/RNA-velocity/: meta.yaml
tutorial-registry/tutorials/advanced-plotting/: meta.yaml
tutorial-registry/tutorials/anndata-getting-started/: meta.yaml  meta.yml
tutorial-registry/tutorials/anndata-mudata-axes/: meta.yaml  meta.yml
tutorial-registry/tutorials/bentotools-subcellular-resolution/: meta.yaml
tutorial-registry/tutorials/ccc-liana/: meta.yaml
tutorial-registry/tutorials/cellcharter-spatial-transcriptomics/: meta.yaml
tutorial-registry/tutorials/compositional-analysis/: meta.yaml
tutorial-registry/tutorials/concatenation-of-multimodal-data/: meta.yaml
tutorial-registry/tutorials/concatenation-of-unimodal-data/: meta.yaml
tutorial-registry/tutorials/decoupler-functional-analysis/: meta.yaml
tutorial-registry/tutorials/decoupler-pseudobulk-de/: meta.yaml  meta.yml
tutorial-registry/tutorials/interoperability/: meta.yaml
tutorial-registry/tutorials/large-datasets/: meta.yaml
tutorial-registry/tutorials/perturbation-modeling/: meta.yaml
tutorial-registry/tutorials/plotting-in-scanpy/: meta.yaml
tutorial-registry/tutorials/preprocessing-and-clustering/: meta.yaml
tutorial-registry/tutorials/pseudotemporal-ordering/: meta.yaml
tutorial-registry/tutorials/rapids-singlecell-gpu/: meta.yaml
tutorial-registry/tutorials/scirpy-tcr/: meta.yaml
tutorial-registry/tutorials/scverse-objects-in-backed-mode/: meta.yaml
tutorial-registry/tutorials/scvi-batch-effect-removal/: meta.yaml
tutorial-registry/tutorials/squidpy-spatial/: meta.yaml
